<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LetsFragment"
    android:orientation="vertical"
>

    <ImageView
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:src="@drawable/immg" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Let's you in"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="@font/font1"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
    >
        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/facebook"
            android:layout_gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/b1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fc"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:gravity="start"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
      >
        <TextView
            android:layout_width="38dp"
            android:layout_height="37dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/google"
            android:layout_gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/b2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gg"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:gravity="start"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
   >
        <TextView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/apple"
            android:layout_gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/b3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ap"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:gravity="start"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="22sp"
        android:fontFamily="@font/font1"
        android:gravity="center_horizontal"/>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonSignIn"
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:layout_height="90dp"
        app:cornerRadius="50dp"
        android:backgroundTint="#28AF2D"
        android:text="@string/st"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:layout_gravity="center">
    </com.google.android.material.button.MaterialButton>


    <LinearLayout
        android:layout_marginTop="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont"
            android:fontFamily="@font/font1"/>

        <TextView
            android:id="@+id/signup"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:textColor="#1BD123"
            android:text="@string/sign" />
    </LinearLayout>
</LinearLayout>